# event-booking

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 42ac69ea174a_add_timezone_support.py  4c072e1cf1ed_add_guest_email_to_bookings.py  8157f3b40a61_add_tickets_count_and_guest_name_to_.py  d6d41889dfea_add_name_to_user.py  ecf94fcd4dad_initial_migration.py
app/: main.py  worker.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  bookings.py  events.py  users.py
app/core/: cache.py  celery_app.py  config.py  database.py  email.py  middleware.py
app/crud/: __init__.py  base.py  crud_booking.py  crud_event.py  crud_user.py
app/models/: __init__.py  booking.py  event.py  user.py
app/schemas/: booking.py  event.py  user.py
app/services/: booking_notifications.py
app/utils/: logger.py
tests/: conftest.py  test_api.py
